fix a bug in LocalIntrospector. Generate tests in alphabetical order