@@ -5,7 +5,7 @@ LOCALCLASSPATH=`echo ${HERE}/stable/lib/compiletime/junit.jar ${HERE}/stable/lib
 
 #CLASSPATH=${LOCALCLASSPATH} ANT_OPTS="-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m" ant $*
 
-ANT_OPTS="-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m"
+ANT_OPTS="-Xmx512m"
 ant_exec_command="exec java $ANT_OPTS -classpath \"$LOCALCLASSPATH\" -Dant.library.dir=\"${HERE}/stable/lib/compiletime\" org.apache.tools.ant.launch.Launcher $ANT_ARGS -cp \"$CLASSPATH\""
 
 eval $ant_exec_command $*
